# credit_card_fraud_project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mlflow.db  prometheus.yml  pyproject.toml  requirements.txt  requirements_api.txt  serve.py
.github/workflows/: pytest.yml  ruff.yml
conf/base/: catalog.yml  parameters.yml  parameters_fraud_pipeline.yml
docs/: model_results.md
notebooks/: AG_FE_experiments.ipynb  baseline_eda.ipynb
scripts/: test_api.ps1
src/fraud_detection_mlops/: __init__.py  __main__.py  feature_utils.py  pipeline_registry.py  settings.py
src/fraud_detection_mlops/pipelines/fraud_pipeline/: __init__.py  nodes.py  pipeline.py
tests/: test_api.py  test_feature_utils.py  test_run.py
tests/pipelines/fraud_pipeline/: test_pipeline.py
